2005-11-08  Werner Koch  <wk@g10code.com>

	* src/gpg4win.mk.in: Also strip DLLs; I am using stripped DLLs for
	months now.

	Released 0.0.2.

	* src/installer.nsi (T_WelcomeTitle): New.
	(MUI_WELCOMEPAGE_TITLE): New.
	(MUI_FINISHPAGE): Enhanced.

	* src/installer-finish.nsi (Uninstall): use a loop to delete the
	startmenu.  Fixed Registry cleaning.

	* src/inst-sections.nsi (onInit): Make sure that only one
	installer is running.

2005-11-07  Werner Koch  <wk@g10code.com>

	* src/installer-finish.nsi: Fixed dereferencing of variable.

	* src/inst-sections.nsi, src/installer-finish.nsi: Ensure that the
	menu gets written for all users.

	* packages/download.sh: Add dummy manual pages.

	* src/installer.nsi: Move compression type to ...
	* src/gpg4win.nsi: .. here and ...
	* src/gpg4win-src.nsi: .. here.  Use zlib for sources.
	
	* src/gpg4win-splash.bmp: New.
	* src/gpg4win-splash.wav: New.
	* src/installer.nsi: Reserve these files
	* src/inst-sections.nsi: Show silly splash screen.
	
	* include/config.nsi.in: Add dummy packages for the manuals.
	* src/uninst-man_advanced_de.nsi, src/uninst-man_novice_de.nsi
	* src/inst-man_advanced_de.nsi, src/inst-man_novice_de.nsi: Ditto.
	* src/Makefile.am (gpg4win_spkgs): Ditto.
	* src/inst-sections.nsi: Ditto.
	
	* src/installer-finish.nsi: Ditto.

	* src/inst-gnupg.nsi: Make section read-only.

2005-11-04  Marcus Brinkmann  <marcus@g10code.de>

	Released 0.0.1.

	* Makefile.am (EXTRA_DIST): Add missing backslash.
	* include/config.nsi.in (top_srcdir): Remove.
	* src/Makefile.am (gpg4win-src-$(VERSION).exe): Pass TOP_SRCDIR,
	SRCDIR and BUILD_DIR (absolute path) as defined values.  Also, use
	$(srcdir) for nsi source file.
	(gpg4win-src-$(VERSION).exe): Likewise.
	* src/gpg4win.nsi: Change directory to build directory.
	Add include dirs ${TOP_SRCDIR} and ${SRCDIR}.
	* src/gpg4win-src.nsi: Likewise.
	* src/installer.nsi: Use ${TOP_SRCDIR} to access COPYING file.
	* src/gpg4win.mk (stamps/stamp-final): Depend on