@@ -151,8 +151,7 @@ stamps/stamp-$(1)-00-install: stamps/stamp-directories
 	($(call SETVARS,$(1));				\
 	 $(MKDIR) "$$$${pkgidir}";			\
 	 cd $$$${pkgidir};				\
-	 $(call DEFLATE_macro,$$$${pkg});		\
-	 $(call STRIP_macro,"$$$${pkgidir}"))
+	 $(call DEFLATE_macro,$$$${pkg}))
 	touch stamps/stamp-$(1)-00-install
 
 # Note that post_install must come last because it may be empty and
@@ -161,8 +160,7 @@ stamps/stamp-$(1)-01-install-dev: stamps/stamp-$(1)-00-install
 	($(call SETVARS,$(1));				\
 	 $(MKDIR) "$$$${pkgidir_dev}";			\
 	 (cd $$$${pkgidir_dev};				\
-	  $(call DEFLATE_macro,$$$${pkg_dev});		\
-	  $(call STRIP_macro,"$$$${pkgidir_dev}"));	\
+	  $(call DEFLATE_macro,$$$${pkg_dev}));		\
 	 $(call gpg4win_pkg_$(call FROB_macro,$(1))_post_install))
 	touch stamps/stamp-$(1)-01-install-dev
 
