@@ -1,3 +1,8 @@
+2005-11-11  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/gpg4win.mk.in (stamps/stamp-$(1)-00-install): Don't strip.
+	(stamps/stamp-$(1)-01-install-dev): Likewise.
+
 2005-11-08  Werner Koch  <wk@g10code.com>
 
 	* src/gpg4win.mk.in: Also strip DLLs; I am using stripped DLLs for
